--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,69 @@
 @media screen and (max-width:576px) {
-    
-    
+    /*  */
+
+    header{
+         padding: 30px 0px;
+         margin: 0 10px;
+         margin-left: 1rem;
+    }
+
+
+    .nav{
+        display: grid;
+        grid-template-columns: 20% 50% 20%;
+  padding-left: 10px;
+    }
+/* navbar navigation bar */
+    .hide_for_mobile{
+        display: none;
+    }
+
+    .hide_for_desktop{
+        display: block;
+    }
+
+    /* banner */
+    .banner{
+        flex-direction: column-reverse;
+        align-items: center;
+        margin: 0;
+     
+
+     
+    }
+
+    .banner_content{
+        align-content: center;
+        text-align: center;
+        width: 100%;
+        color:var(--black-color);
+        }
+
+        .sponser{
+      align-content:baseline;
+            flex-wrap: wrap;
+          }
+
+        .sponser img{
+            padding: 10px;
+            width:20%;
+        }
+
+        main {
+              margin:0px;
+        }
+
+        .img_grid_main_box{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .section2{
+            margin: 100px 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+
 }
+
